--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-dev": "set NODE_ENV=development && gulp",
     "build-prod": "set NODE_ENV=production && gulp",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ejlint": "ejslint views/search/list.ejs"
+    "ejslint": "ejslint views/search/list.ejs"
   },
   "author": "Takayu Iida",
   "license": "MIT",
@@ -24,13 +24,20 @@
     "require-dir": "^1.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
+    "csrf": "^3.1.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "log4js": "^2.11.0",
     "mongodb": "^3.3.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "popper.js": "^1.16.0"
   }
 }
