--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
+    "natives": "^1.1.6",
     "require-dir": "^1.0.0"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "csrf": "^3.1.0",
@@ -35,8 +36,8 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "log4js": "^2.11.0",
-    "mongodb": "^3.3.3",
-    "passport": "^0.4.0",
+    "mongodb": "^3.4.0",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "popper.js": "^1.16.0"
   }
