--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "startd": "NODE_ENV=development node app.js",
-    "startp": "NODE_ENV=production node app.js",
+    "startd": "export NODE_ENV=development node app.js",
+    "startp": "export NODE_ENV=production node app.js",
     "gulp": "gulp",
-    "build-dev": "set NODE_ENV=development && gulp",
-    "build-prod": "set NODE_ENV=production && gulp",
+    "build-dev": "export NODE_ENV=development && gulp",
+    "build-prod": "export NODE_ENV=production && gulp",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ejslint": "ejslint views/search/list.ejs"
   },
